using if and else inside handlebars file

--- a/src/7_TEMPLATE_ENGINE/3_data_for_view/views/home.handlebars
+++ b/src/7_TEMPLATE_ENGINE/3_data_for_view/views/home.handlebars
@@ -1,2 +1,2 @@
 <h1>Hello Handlebars</h1>
-<p>Some text for web</p>
+<p>The user's name is: {{user.name}} {{user.surname}} and he's {{user.age}} years old.</p>
