--- a/src/8_NODE_WITH_SQL/1_working_with_mysql/views/home.handlebars
+++ b/src/8_NODE_WITH_SQL/1_working_with_mysql/views/home.handlebars
@@ -1,1 +1,12 @@
-<h1>My project</h1>
+<h1>Register your book:</h1>
+ <form action="/books/insertbook" method="POST" class="form">
+    <div class="form-control">
+        <label for="title">Title: </label>
+        <input type="text" name="title" placeholder="Type the title">
+    </div>
+    <div class="form-control">
+        <label for="pageqty">Number of pages: </label>
+        <input type="number" name="pageqty" placeholder="How many pages does the book have? ">
+    </div>
+    <input type="submit" value="Register">
+ </form>
