--- a/src/8_NODE_WITH_SQL/1_working_with_mysql/public/css/style.css
+++ b/src/8_NODE_WITH_SQL/1_working_with_mysql/public/css/style.css
@@ -1,5 +1,6 @@
 * {
     font-family: Helvetica;
+    margin: 0;
 }
 
 h1 {
@@ -27,6 +28,22 @@ h1 {
     padding: 5px;
 }
 
+#navbar {
+    border-bottom: 1px solid #CCC;
+    padding: 1em;
+    margin-bottom: 1em;
+}
+
+#navbar ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+}
+
+#navbar ul li {
+    margin-left: 1em;
+}
+
 /* BOOKS */
 .books-container div {
     border-bottom: 1px solid #ccc;
@@ -36,4 +53,13 @@ h1 {
 
 .bold {
     font-weight: bold;
+}
+
+/* BOOK */
+#book-page {
+    padding: 2em;
+}
+
+#book-page .container {
+    text-align: center;
 }
