--- a/src/8_NODE_WITH_SQL/1_working_with_mysql/views/layouts/main.handlebars
+++ b/src/8_NODE_WITH_SQL/1_working_with_mysql/views/layouts/main.handlebars
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <nav id="navbar">
+        <ul>
+            <li><a href="/">Register book</a></li>
+            <li><a href="/books">Books</a></li>
+        </ul>
+    </nav>
     {{{body}}}
 </body>
 </html>
