add function for editing book properties

--- a/src/8_NODE_WITH_SQL/1_working_with_mysql/public/css/style.css
+++ b/src/8_NODE_WITH_SQL/1_working_with_mysql/public/css/style.css
@@ -50,7 +50,6 @@ h1 {
     padding: 5px;
     margin: 5px;
 }
-
 .bold {
     font-weight: bold;
 }
@@ -59,7 +58,10 @@ h1 {
 #book-page {
     padding: 2em;
 }
-
 #book-page .container {
     text-align: center;
+}
+
+.actions {
+    margin-top: 1em;
 }
