--- a/src/8_NODE_WITH_SQL/1_working_with_mysql/views/book.handlebars
+++ b/src/8_NODE_WITH_SQL/1_working_with_mysql/views/book.handlebars
@@ -3,5 +3,8 @@
     <div class="container">
         <h1>{{book.title}}</h1>
         <p>This book has {{book.pageqty}} pages</p>
+        <div class="actions">
+            <a href="/books/edit/{{book.id}}">Edit</a>
+        </div>
     </div>
 </div>
