--- a/src/8_NODE_WITH_SQL/1_working_with_mysql/public/css/style.css
+++ b/src/8_NODE_WITH_SQL/1_working_with_mysql/public/css/style.css
@@ -64,4 +64,10 @@ h1 {
 
 .actions {
     margin-top: 1em;
+    display: flex;
+    justify-content: center;
+}
+
+.actions a {
+    margin-right: 1em;
 }
