--- a/src/8_NODE_WITH_SQL/1_working_with_mysql/views/book.handlebars
+++ b/src/8_NODE_WITH_SQL/1_working_with_mysql/views/book.handlebars
@@ -5,6 +5,9 @@
         <p>This book has {{book.pageqty}} pages</p>
         <div class="actions">
             <a href="/books/edit/{{book.id}}">Edit</a>
+            <form action="/books/remove/{{book.id}}" method="POST">
+                <input type="submit" value="Remove">
+            </form>
         </div>
     </div>
 </div>
