--- a/src/9_SEQUELIZE/1_working_with_sequelize/public/css/style.css
+++ b/src/9_SEQUELIZE/1_working_with_sequelize/public/css/style.css
@@ -5,6 +5,7 @@
 
 h1 {
     text-align: center;
+    margin-bottom: 1em;
 }
 
 .form,
@@ -60,4 +61,57 @@ h1 {
 
 .actions a {
     margin-right: 1em;
+}
+
+
+/* USERS */
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+    gap: 10px;
+}
+
+.container .item {
+    border: 1px solid #CCC;
+    border-radius: 5px;
+    padding: 20px;
+    flex: 1 1 29%;
+    max-width: 29%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.item h2,
+.item p{
+    margin-bottom: .8em;
+}
+
+.actions{
+    display: flex;
+    justify-content: space-between;
+}
+
+.actions a,
+.actions input {
+    border: 1px solid #BBB;
+    border-radius: 5px;
+    text-decoration: none;
+    background-color: #FFF;
+    padding: 5px;
+    font-size: 15px;
+    color: #000;
+    cursor: pointer;
+}
+
+.actions .details-btn {
+    border-color: #004085;
+    color: #004085;
+}
+
+.actions .delete-btn {
+    border-color: #721c24;
+    color: #721c24;
 }
