--- a/src/9_SEQUELIZE/1_working_with_sequelize/views/home.handlebars
+++ b/src/9_SEQUELIZE/1_working_with_sequelize/views/home.handlebars
@@ -1,1 +1,15 @@
 <h1>Hello Sequelize</h1>
+<div class="container">
+    {{#each users}}
+    <div class="item">
+        <h2>{{this.name}}</h2>
+        <p>{{this.occupation}}</p>
+        <div class="actions">
+            <a href="/users/{{this.id}}" class="details-btn">See details</a>
+            <form action="/users/delete/{{this.id}}" method="POST" class="action">
+                <input type="submit" value="Delete" class="delete-btn">
+            </form>
+        </div>
+    </div>
+    {{/each}}
+</div>
