adds feature for updating user

--- a/src/9_SEQUELIZE/1_working_with_sequelize/views/home.handlebars
+++ b/src/9_SEQUELIZE/1_working_with_sequelize/views/home.handlebars
@@ -1,4 +1,4 @@
-<h1>Hello Sequelize</h1>
+<h1>Users</h1>
 <div class="container">
     {{#each users}}
     <div class="item">
@@ -6,6 +6,7 @@
         <p>{{this.occupation}}</p>
         <div class="actions">
             <a href="/users/{{this.id}}" class="details-btn">See details</a>
+            <a href="/users/edit/{{this.id}}" class="edit-btn">Edit</a>
             <form action="/users/delete/{{this.id}}" method="POST" class="action">
                 <input type="submit" value="Delete" class="delete-btn">
             </form>
