--- a/src/9_SEQUELIZE/1_working_with_sequelize/views/layouts/main.handlebars
+++ b/src/9_SEQUELIZE/1_working_with_sequelize/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
 <body>
     <nav id="navbar">
         <ul>
+            <li><a href="/">Users</a></li>
             <li><a href="/users/create">Register</a></li>
         </ul>
     </nav>
