adds post for adressess

--- a/src/9_SEQUELIZE/1_working_with_sequelize/views/useredit.handlebars
+++ b/src/9_SEQUELIZE/1_working_with_sequelize/views/useredit.handlebars
@@ -19,3 +19,22 @@
     </div>
     <input type="submit" value="Edit">
 </form>
+<div class="address-container">
+    <h2>Addresses:</h2>
+    <form action="/address/create" method="POST">
+        <input type="hidden" name="UserId" value="{{user.id}}">
+        <div class="form-control">
+            <label for="street">Street:</label>
+            <input type="text" name="street" placeholder="Type residence's street:">
+        </div>
+        <div class="form-control">
+            <label for="number">Number:</label>
+            <input type="text" name="number" placeholder="Type residence's number:">
+        </div>
+        <div class="form-control">
+            <label for="city">City:</label>
+            <input type="text" name="city" placeholder="Type residence's city:">
+        </div>
+        <input type="submit" value="Include address">
+    </form>
+</div>
