--- a/src/9_SEQUELIZE/1_working_with_sequelize/public/css/style.css
+++ b/src/9_SEQUELIZE/1_working_with_sequelize/public/css/style.css
@@ -121,6 +121,7 @@ h1 {
     max-width: 1000px;
     margin: 1em auto;
     padding-top: 1em;
+    padding-bottom: 200px;
     border-top: 1px solid #ccc;
 }
 
@@ -130,4 +131,10 @@ h1 {
 
 .address-container form {
     width: 300px;
+}
+
+.address-list {
+    margin-top: 1em;
+    padding-top: 1em;
+    border-top:  1px solid #ccc;
 }
