--- a/src/9_SEQUELIZE/1_working_with_sequelize/views/useredit.handlebars
+++ b/src/9_SEQUELIZE/1_working_with_sequelize/views/useredit.handlebars
@@ -37,4 +37,10 @@
         </div>
         <input type="submit" value="Include address">
     </form>
+    <div class="address-list">
+        <h2>Addresses list:</h2>
+        {{#each user.Addresses}}
+            <p>#{{this.id}} - {{this.street}} - {{this.number}} - {{this.city}}</p>
+        {{/each }}
+    </div>
 </div>
