--- a/src/10_MVC/views/tasks/edit.handlebars
+++ b/src/10_MVC/views/tasks/edit.handlebars
@@ -1,5 +1,5 @@
 <h1>Editing task: {{task.title}}</h1>
-<form action="/tasks/add" method="POST">
+<form action="/tasks/edit" method="POST">
     <input type="hidden" name="id" value="{{task.id}}">
     <div class="form-control">
         <label for="title">Title:</label>
