--- a/src/11_THOUGHTS/views/layouts/main.handlebars
+++ b/src/11_THOUGHTS/views/layouts/main.handlebars
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thoughts</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/styles.css">
+    <!-- BOOTSTRAP ICONS --> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
-    {{{ body }}}
+    <nav id="navbar">
+        <a href="/" id="logo">
+            <img src="/img/thoughts_logo.png" alt="Thoughts">
+        </a>
+        <ul>
+            <li><a href="/">Thoughts</a></li>
+            <!-- urls after authentication -->
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Register</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <!-- system messages -->
+        {{{ body }}}
+    </div>
+    <footer>
+        <p><span>Thoughts</span> &copy; 2023</p>
+    </footer>
 </body>
 </html>
