--- a/src/11_THOUGHTS/views/layouts/main.handlebars
+++ b/src/11_THOUGHTS/views/layouts/main.handlebars
@@ -22,8 +22,17 @@
         </ul>
     </nav>
     <div class="container">
-        <!-- system messages -->
-        {{{ body }}}
+      {{#if messages.message}}
+        <div class="message">
+          {{messages.message}}
+        </div>
+      {{/if}}
+      {{#if message}}
+        <div class="message">
+          {{message}}
+        </div>
+      {{/if}}
+      {{{ body }}}
     </div>
     <footer>
         <p><span>Thoughts</span> &copy; 2023</p>
