--- a/src/11_THOUGHTS/views/auth/register.handlebars
+++ b/src/11_THOUGHTS/views/auth/register.handlebars
@@ -18,6 +18,6 @@
             <input type="password" name="confirmpassword" placeholder="Confirm your password: " required>
         </div>
         <input type="submit" value="Register" id="">
-        <p>Already have an account? <a href="/login">Click here.</a></p>
+        <p>Already have an account? <a href="/login">Click here</a></p>
     </form>
 </div>
