--- a/src/11_THOUGHTS/public/css/styles.css
+++ b/src/11_THOUGHTS/public/css/styles.css
@@ -115,6 +115,27 @@ form input[type='submit']:hover,
     color: #fff;
 }
 
+/* CREATE / EDIT FORM */
+.thought-form-container a {
+    color: #F6982D;
+}
+
+.thought-form-container a:hover {
+    color: #fff;
+}
+
+.thought-form-container h1 {
+ margin: 1em 0;
+ color: #fff;
+ border-left: 4px solid #F6982D;
+ padding: 0.3em;
+}
+
+.thought-form-container form {
+    max-width: 30%;
+    margin-top: 1.5em;
+}
+
 /* FOOTER */
 footer {
     height: 150px;
