--- a/src/11_THOUGHTS/views/thoughts/home.handlebars
+++ b/src/11_THOUGHTS/views/thoughts/home.handlebars
@@ -1,1 +1,40 @@
-<h1>All Thoughts</h1>
+<div class="home-header">
+    {{#if search}}
+        <h1>You're searching for: <span>{{search}}</span></h1>
+        {{#if thoughtsQty}}
+            <p><span>{{thoughtsQty}}</span> thougths were found for the term: <span>{{search}}</span></p>
+        {{else}}
+            <p>No thoughts were found for the term: <span>{{search}}</span></p>
+        {{/if}}
+    {{else}}
+        <h1>Here's some of our <span>thoughts</span>:</h1>
+    {{/if}}
+    <form action="/" method="GET">
+        <input type="text" name="search" placeholder="Are you searching for something?">
+        <input type="submit" class="btn" value="Search">
+    </form>
+    <div class="order-container">
+        <span>Order by:</span>
+        <form action="/" method="GET">
+            <input type="hidden" name="search" value="{{this.search}}">
+            <input type="hidden" name="order" value="new">
+            <button type="submit"><i class="bi bi-arrow-up"></i></button>
+        </form>
+        <form action="/" method="GET">
+            <input type="hidden" name="search" value="{{this.search}}">
+            <input type="hidden" name="order" value="old">
+            <button type="submit"><i class="bi bi-arrow-down"></i></button>
+        </form>
+        <a href="/">Clear</a>
+    </div>
+</div>
+<div class="thoughts-container">
+    {{#each thoughts}}
+        <figure>
+            <blockquote>
+                "{{this.title}}"
+            </blockquote>
+            <figcaption>by: <span>{{this.User.name}}</span></figcaption>
+        </figure>
+    {{/each}}
+</div>
