--- a/src/12_MONGODB/public/css/styles.css
+++ b/src/12_MONGODB/public/css/styles.css
@@ -49,16 +49,19 @@ form {
 
 .form-control input,
 .form-control textarea {
-  border: 1px solid #fff;
-  padding: 5px;
+  padding: 7px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
   margin-bottom: 1em;
 }
 
+form input[type='submit'],
 .btn {
-  background-color: #fff;
-  color: #000;
-  padding: 5px 10px;
+  background-color: #000;
+  color: #fff;
+  padding: 0.7em 1.5em;
+  font-weight: bold;
+  border-radius: 5px;
   border: none;
-  margin-top: 1em;
   cursor: pointer;
 }
