chore: it's working - checkpoint bug

--- a/src/12_MONGODB/views/products/create.handlebars
+++ b/src/12_MONGODB/views/products/create.handlebars
@@ -1,8 +1,12 @@
 <h1>Create Product</h1>
-<form action="/products/create" method="POST">
+<form action="/create" method="POST">
     <div class="form-control">
         <label for="name">Product's name:</label>
         <input type="text" name="name" placeholder="Type the product's name">
+    </div>
+    <div class="form-control">
+        <label for="image">Product's image:</label>
+        <input type="text" name="image" placeholder="Insert the image URL">
     </div>
     <div class="form-control">
         <label for="price">Product's price:</label>
