--- a/src/12_MONGODB/views/layouts/main.handlebars
+++ b/src/12_MONGODB/views/layouts/main.handlebars
@@ -9,12 +9,12 @@
 <body>
     <nav id="navbar">
         <ul>
-            <li><a href="/products">Products</a></li>
-            <li><a href="/products/create">Create product</a></li>
+            <li><a href="/">Products</a></li>
+            <li><a href="/create">Create product</a></li>
         </ul>
     </nav>
     <div class="container">
-        {{{body}}}
+        {{{ body }}}
     </div>
 </body>
 </html>
