--- a/src/12_MONGODB/views/products/all.handlebars
+++ b/src/12_MONGODB/views/products/all.handlebars
@@ -1,1 +1,13 @@
 <h1>Products</h1>
+<div class="products">
+    {{#each products}}
+        <div class="product">
+            <img src="{{this.image}}" alt="{{this.name}}">
+            <h3>{{this.name}}</h3>
+            <p>U${{this.price}}</p>
+            <div class="actions">
+                <a href="/products/{{this._id}}">Details</a>
+            </div>
+        </div>
+    {{/each}}
+</div>
