--- a/src/12_MONGODB/views/products/all.handlebars
+++ b/src/12_MONGODB/views/products/all.handlebars
@@ -6,7 +6,7 @@
             <h3>{{this.name}}</h3>
             <p>U${{this.price}}</p>
             <div class="actions">
-                <a href="/products/{{this._id}}">Details</a>
+                <a href="/{{this._id}}">Details</a>
             </div>
         </div>
     {{/each}}
