--- a/src/12_MONGODB/views/products/product.handlebars
+++ b/src/12_MONGODB/views/products/product.handlebars
@@ -4,4 +4,7 @@
     <p>Price: U${{product.price}}</p>
     <img src="{{product.image}}" alt="{{product.name}}">
     <p>Description: {{product.description}}</p>
+    <form action="/remove/{{product._id}}" method="POST">
+        <input type="submit" value="Delete" class="btn">
+    </form>
 </div>
