--- a/src/12_MONGODB/views/products/all.handlebars
+++ b/src/12_MONGODB/views/products/all.handlebars
@@ -7,6 +7,7 @@
             <p>U${{this.price}}</p>
             <div class="actions">
                 <a href="/{{this._id}}">Details</a>
+                <a href="/edit/{{this._id}}">Edit</a>
             </div>
         </div>
     {{/each}}
